# CoreLibs

./: .gitignore  README.md
.github/: stale.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yaml  02-feature-request.yaml
examples/java/HttpProxy/: pom.xml
examples/java/HttpProxy/src/main/java/com/adguard/http/proxy/: AsyncTcpConnectionEndpoint.java  AsyncTcpServer.java  Constants.java  HttpProxyContext.java  HttpProxyServer.java  TestHttpClient.java
examples/java/HttpProxy/src/test/java/com/adguard/http/proxy/: HttpProxyTest.java  TestUrlStrip.java
http-parser/: Android.mk  CMakeLists.txt  Makefile.simple  run_test.sh
http-parser-java/: pom.xml
http-parser-java/jni/: Android.mk  Application.mk  CMakeLists.txt  Makefile  Makefile.osx  Makefile.simple  callbacks.cpp  callbacks.h  com_adguard_http_parser_HttpMessage.h  com_adguard_http_parser_HttpMessage_HttpHeaderField.h  com_adguard_http_parser_NativeLogger.h  com_adguard_http_parser_NativeParser.h  com_adguard_http_parser_NativeParser_Callbacks.h  logger.cpp  parser.cpp
http-parser-java/src/main/java/com/adguard/http/parser/: ContentEncoding.java  Direction.java  HttpMessage.java  NativeLogger.java  NativeParser.java  Parser.java  ParserCallbacks.java
http-parser-java/src/test/java/com/adguard/http/parser/: NativeLoggerTest.java
http-parser/src/: logger.c  logger.h  parser.c  parser.h  parser_test.c  test_streams.h
http-parser/test/: CMakeLists.txt  test.h  test_decode.c  test_http_parser.c  test_http_parser.h  test_logger.c  test_parser_util.c
